--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">">
+  <link href="ICO.ico" rel="icon">
 </head>
 
 <body link =#ff7b54 Alink =#404B69 Vlink =#00917c>
