--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Drum Kit</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">">
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+  <link rel="icon" href="C:/Users/Divyanshu Rai/Downloads/ICO.ico">
 </head>
 
 <body link =#ff7b54 Alink =#404B69 Vlink =#00917c>
